[workspace]
members = [ 'ort-sys' ]
default-members = [ '.' ]
exclude = [
	'backends/candle',
	'backends/tract',
	'examples/async-gpt2-api',
	'examples/cudarc',
	'examples/custom-ops',
	'examples/gpt2',
	'examples/model-info',
	'examples/modnet',
	'examples/phi-3-vision',
	'examples/sentence-transformers',
	'examples/training',
	'examples/wasm-emscripten',
	'examples/yolov8',
	'tests/leak-check'
]

[package]
name = "voicevox-ort"
description = "A safe Rust wrapper for ONNX Runtime 1.22 - Optimize and accelerate machine learning inference & training"
version = "2.0.0-rc.10"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VOICEVOX/ort"
homepage = "https://ort.pyke.io/"
readme = "README.md"
keywords = [ "machine-learning", "ai", "ml", "onnxruntime" ]
categories = [ "algorithms", "mathematics", "science" ]
authors = [
	"pyke.io <contact@pyke.io>",
	"Nicolas Bigaouette <nbigaouette@gmail.com>"
]
include = [ "/src/", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md" ]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[package.metadata.docs.rs]
features = [ "std", "ndarray", "half", "num-complex", "training", "fetch-models", "load-dynamic", "copy-dylibs", "__init-for-voicevox" ]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [ "--cfg", "docsrs" ]

[lib]
name = "ort"

[features]
default = [ "std", "ndarray", "tracing", "download-binaries", "copy-dylibs" ]

std = [ "voicevox-ort-sys/std", "ndarray/std", "tracing?/std" ]
training = [ "voicevox-ort-sys/training" ]

ndarray = [ "dep:ndarray" ]
half = [ "dep:half" ]
num-complex = [ "dep:num-complex" ]
tracing = [ "dep:tracing" ]

fetch-models = [ "std", "dep:ureq", "dep:sha2" ]
download-binaries = [ "voicevox-ort-sys/download-binaries" ]
load-dynamic = [ "std", "libloading", "voicevox-ort-sys/load-dynamic" ]
copy-dylibs = [ "voicevox-ort-sys/copy-dylibs" ]

alternative-backend = [ "voicevox-ort-sys/disable-linking" ]

cuda = [ "voicevox-ort-sys/cuda" ]
tensorrt = [ "voicevox-ort-sys/tensorrt" ]
openvino = [ "voicevox-ort-sys/openvino" ]
onednn = [ "voicevox-ort-sys/onednn" ]
directml = [ "voicevox-ort-sys/directml" ]
nnapi = [ "voicevox-ort-sys/nnapi" ]
coreml = [ "voicevox-ort-sys/coreml" ]
xnnpack = [ "voicevox-ort-sys/xnnpack" ]
rocm = [ "voicevox-ort-sys/rocm" ]
acl = [ "voicevox-ort-sys/acl" ]
armnn = [ "voicevox-ort-sys/armnn" ]
tvm = [ "voicevox-ort-sys/tvm" ]
migraphx = [ "voicevox-ort-sys/migraphx" ]
rknpu = [ "voicevox-ort-sys/rknpu" ]
vitis = [ "voicevox-ort-sys/vitis" ]
cann = [ "voicevox-ort-sys/cann" ]
qnn = [ "voicevox-ort-sys/qnn" ]
webgpu = [ "voicevox-ort-sys/webgpu" ]
azure = [ "voicevox-ort-sys/azure" ]
nv = [ "voicevox-ort-sys/nv" ]

# 動的ライブラリの読み込みから`OrtEnv`の作成までを、VOICEVOX独自の方法で行えるようにする。
#
# ortとしての通常の初期化の経路は禁止される。
__init-for-voicevox = []

[dependencies]
anyhow = "1.0"
once_cell = "1.19.0"
voicevox-ort-sys = { version = "=2.0.0-rc.10", path = "ort-sys", default-features = false }
smallvec = { version = "=2.0.0-alpha.10", default-features = false }

ndarray = { version = "0.16", default-features = false, optional = true }
libloading = { version = "0.8", optional = true }
ureq = { version = "3", optional = true, default-features = false, features = [ "rustls" ] }
sha2 = { version = "0.10", optional = true }
tracing = { version = "0.1", optional = true, default-features = false }
half = { version = "2.1", default-features = false, optional = true }
num-complex = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
ureq = { version = "3", default-features = false, features = [ "native-tls" ] }
image = "0.25"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
tokio = { version = "1.36", features = [ "test-util" ] }
