[package]
publish = false
name = "example-async-gpt2-api"
version = "0.0.0"
edition = "2021"

[dependencies]
voicevox-ort = { path = "../../", features = [ "fetch-models" ] }
tokenizers = { version = "0.21", default-features = false, features = [ "onig" ] }
rand = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
futures = "0.3"
headers = "0.4"
axum = { version = "0.7", features = [ "json" ] }
tokio = { version = "1.36", features = [ "full" ] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
anyhow = "1.0"
async-stream-lite = "0.2"

ort-candle = { path = "../../backends/candle", optional = true }
ort-tract = { path = "../../backends/tract", optional = true }

[features]
load-dynamic = [ "voicevox-ort/load-dynamic" ]

cuda = [ "voicevox-ort/cuda" ]
tensorrt = [ "voicevox-ort/tensorrt" ]
openvino = [ "voicevox-ort/openvino" ]
onednn = [ "voicevox-ort/onednn" ]
directml = [ "voicevox-ort/directml" ]
nnapi = [ "voicevox-ort/nnapi" ]
coreml = [ "voicevox-ort/coreml" ]
xnnpack = [ "voicevox-ort/xnnpack" ]
rocm = [ "voicevox-ort/rocm" ]
acl = [ "voicevox-ort/acl" ]
armnn = [ "voicevox-ort/armnn" ]
tvm = [ "voicevox-ort/tvm" ]
migraphx = [ "voicevox-ort/migraphx" ]
rknpu = [ "voicevox-ort/rknpu" ]
vitis = [ "voicevox-ort/vitis" ]
cann = [ "voicevox-ort/cann" ]
qnn = [ "voicevox-ort/qnn" ]
webgpu = [ "voicevox-ort/webgpu" ]
azure = [ "voicevox-ort/azure" ]

backend-candle = [ "voicevox-ort/alternative-backend", "dep:ort-candle" ]
backend-tract = [ "voicevox-ort/alternative-backend", "dep:ort-tract" ]

[[example]]
name = "async-gpt2-api"
path = "async-gpt2-api.rs"
