[package]
publish = false
name = "example-model-info"
version = "0.0.0"
edition = "2021"

[dependencies]
voicevox-ort = { path = "../../" }

ort-candle = { path = "../../backends/candle", optional = true }
ort-tract = { path = "../../backends/tract", optional = true }

[features]
load-dynamic = [ "voicevox-ort/load-dynamic" ]

backend-candle = [ "voicevox-ort/alternative-backend", "dep:ort-candle" ]
backend-tract = [ "voicevox-ort/alternative-backend", "dep:ort-tract" ]

[[example]]
name = "model-info"
path = "model-info.rs"
